// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildCreativePrompt > adiciona o bloco de consistência quando o quadrado tem Story de referência 1`] = `
"[INTRODUCTION]
Create a 1:1 perfect square Instagram post, 1080x1080px advertisement image for a professional brand.
Quality target: standard high-quality digital advertising image.

[DESIGN SYSTEM]


[SAFE ZONE]
LAYOUT RULE — READ FIRST: the top 9.3% and the bottom 9.3% of the image are EMPTY BACKGROUND. No text, no logo, no badge, no button, nothing readable may appear in those bands — they contain only the continuation of the background artwork. Every readable element is grouped together in the band between 9.3% and 90.7% of the image height, and no closer than 9.3% to the left or right edge.
IMAGERY IS NOT RESTRICTED. The photograph, background, gradient, texture and any purely visual element MUST fill the entire frame, edge to edge, full bleed. Never shrink, letterbox or inset the artwork to respect the margins below. A full-bleed background is preferred.
THE MESSAGE IS RESTRICTED. Every element that carries meaning — headline, subheadline, body copy, price, date, badge, brand logo and call-to-action — must sit ENTIRELY inside the safe area described below, because the platform UI (profile picture, caption, CTA button, engagement bar) is drawn on top of everything outside it.
SAFE AREA: keep the top 9.3% and the bottom 9.3% of the frame free of message elements, plus 9.3% on each side. On the nominal 1080x1080 canvas that is the rectangle from x=100 to x=980 and from y=100 to y=980 (880x880px). The percentages are the rule; the pixels are only a reference.
TYPE SIZE. Size the type against the SAFE BOX (880x880px), not against the full frame — type that looks right relative to the whole canvas reads as small once confined to the safe box. At this canvas width use roughly: headline 64-120px, subheadline 40-56px, body and data 28-36px, call-to-action 36-48px. Text must stay legible on a phone screen.
LEAVE BREATHING ROOM. Do not push elements right up against the safe boundary — leave visible margin inside it, so edge cropping on some devices never touches the message.

[VISUAL CONSISTENCY — CRITICAL]
A reference Story version of this same creative is attached as the FIRST image. The square version MUST replicate its EXACT color palette, lighting, color grading, photographic treatment, typography choices and overall mood. Only the framing/composition changes to fit a 1:1 square. Treat that Story as the visual ground truth — do NOT shift hues, saturation, contrast or styling.

[DO NOT INCLUDE]

- Any headline, body copy, logo, badge or call-to-action outside the safe area (outside x 100-980, y 100-980 on the nominal canvas)
- Any text in a language other than Portuguese (Brazil)
- Misspelled, garbled or fake-looking text
- Watermarks, signatures, low-resolution artifacts
- Generic stock-photo aesthetic

All text in the artwork MUST be written in Portuguese (Brazil). Final result: standard high-quality digital advertising image, polished, professional advertising design, sharp typography, brand-grade composition."
`;

exports[`buildCreativePrompt > monta com copy da IA, mood e anti-padrões 1`] = `
"[INTRODUCTION]
Create a 4:5 vertical Instagram feed advertisement, optimized for Meta Ads feed placement advertisement image for clínica de estética premium.
Quality target: ultra high-resolution 4K advertising image, crisp details, sharp typography, premium finish.

[DESIGN SYSTEM]
DOC: paleta escura, tipografia grotesk

[SAFE ZONE]
LAYOUT RULE — READ FIRST: the top 18.5% and the bottom 18.5% of the image are EMPTY BACKGROUND. No text, no logo, no badge, no button, nothing readable may appear in those bands — they contain only the continuation of the background artwork. Every readable element is grouped together in the band between 18.5% and 81.5% of the image height, and no closer than 9.3% to the left or right edge.
IMAGERY IS NOT RESTRICTED. The photograph, background, gradient, texture and any purely visual element MUST fill the entire frame, edge to edge, full bleed. Never shrink, letterbox or inset the artwork to respect the margins below. A full-bleed background is preferred.
THE MESSAGE IS RESTRICTED. Every element that carries meaning — headline, subheadline, body copy, price, date, badge, brand logo and call-to-action — must sit ENTIRELY inside the safe area described below, because the platform UI (profile picture, caption, CTA button, engagement bar) is drawn on top of everything outside it.
SAFE AREA: keep the top 18.5% and the bottom 18.5% of the frame free of message elements, plus 9.3% on each side. On the nominal 1080x1350 canvas that is the rectangle from x=100 to x=980 and from y=250 to y=1100 (880x850px). The percentages are the rule; the pixels are only a reference.
TYPE SIZE. Size the type against the SAFE BOX (880x850px), not against the full frame — type that looks right relative to the whole canvas reads as small once confined to the safe box. At this canvas width use roughly: headline 64-120px, subheadline 40-56px, body and data 28-36px, call-to-action 36-48px. Text must stay legible on a phone screen.
LEAVE BREATHING ROOM. Do not push elements right up against the safe boundary — leave visible margin inside it, so edge cropping on some devices never touches the message.

[TEXT BLOCKS]
All text must be rendered exactly as written, in Portuguese (Brazil), with professional typography and perfect legibility.
LABEL (top, small uppercase, wide tracking, secondary color): "NOVO"
MAIN TITLE (dominant, large, primary typeface, high contrast): "Botox Day"
SUBTITLE (medium, secondary typeface, supports the title): "com naturalidade"
DATA LINE (small, factual: date/place/price/spots): "12/08"
CTA (pill or button, accent color, bold): "Agendar"

[MOOD]
Feels like: Apple, Nike.
Tone: sofisticado, direto.
Not: clipart, gradiente neon.

[DO NOT INCLUDE]
- clipart
- gradiente neon
- nada de borda arredondada exagerada
- Any headline, body copy, logo, badge or call-to-action outside the safe area (outside x 100-980, y 250-1100 on the nominal canvas)
- Any text in a language other than Portuguese (Brazil)
- Misspelled, garbled or fake-looking text
- Watermarks, signatures, low-resolution artifacts
- Generic stock-photo aesthetic

All text in the artwork MUST be written in Portuguese (Brazil). Final result: ultra high-resolution 4K advertising image, crisp details, sharp typography, premium finish, polished, professional advertising design, sharp typography, brand-grade composition."
`;

exports[`buildCreativePrompt > monta com template, logo e fotos de produto 1`] = `
"[INTRODUCTION]
Create a 16:9 horizontal advertising image advertisement image for a professional brand.
Quality target: ultra high-resolution 4K advertising image, crisp details, sharp typography, premium finish.

[ATTACHED PHOTOS]
2 reference image(s) provided showing the product/person/scene that must appear in the composition.
Preserve their exact likeness. Do NOT alter faces, skin tone, body shape or appearance in any way. Treat the subject as a fixed reference.
Integrate the subject naturally into the composition described below.

[DESIGN SYSTEM]


[TEMPLATE STRUCTURE]
Use the following reusable template structure as the creative foundation — layout, visual hierarchy, typography rhythm, spacing and composition only.
Template name: Wavy Editorial
Template category: Oferta
Template visual structure: {"grid":"12col"}

This structure defines LAYOUT AND STYLE ONLY. Do NOT reuse, reference or render any headline, label, subtitle, CTA or body copy from a previous use of this template. ALL text content for this artwork comes exclusively from the [TEXT BLOCKS] section below, verbatim — adapt only the text, product, references and business context from the current project.

[SAFE ZONE]
LAYOUT RULE — READ FIRST: the top 9.6% and the bottom 9.6% of the image are EMPTY BACKGROUND. No text, no logo, no badge, no button, nothing readable may appear in those bands — they contain only the continuation of the background artwork. Every readable element is grouped together in the band between 9.6% and 90.4% of the image height, and no closer than 10% to the left or right edge.
IMAGERY IS NOT RESTRICTED. The photograph, background, gradient, texture and any purely visual element MUST fill the entire frame, edge to edge, full bleed. Never shrink, letterbox or inset the artwork to respect the margins below. A full-bleed background is preferred.
THE MESSAGE IS RESTRICTED. Every element that carries meaning — headline, subheadline, body copy, price, date, badge, brand logo and call-to-action — must sit ENTIRELY inside the safe area described below, because the platform UI (profile picture, caption, CTA button, engagement bar) is drawn on top of everything outside it.
SAFE AREA: keep the top 9.6% and the bottom 9.6% of the frame free of message elements, plus 10% on each side. On the nominal 1920x1080 canvas that is the rectangle from x=192 to x=1728 and from y=104 to y=976 (1536x872px). The percentages are the rule; the pixels are only a reference.
TYPE SIZE. Size the type against the SAFE BOX (1536x872px), not against the full frame — type that looks right relative to the whole canvas reads as small once confined to the safe box. At this canvas width use roughly: headline 114-213px, subheadline 71-100px, body and data 50-64px, call-to-action 64-85px. Text must stay legible on a phone screen.
LEAVE BREATHING ROOM. Do not push elements right up against the safe boundary — leave visible margin inside it, so edge cropping on some devices never touches the message.

[BRAND LOGO]
A brand logo is provided as a separate reference. Place it discreetly in a corner (top-left or bottom-right preferred), small, clean. Do NOT distort, recolor, recreate or redesign it — treat as a fixed brand asset.

[DO NOT INCLUDE]
- sem texto em inglês
- sem moldura
- Any headline, body copy, logo, badge or call-to-action outside the safe area (outside x 192-1728, y 104-976 on the nominal canvas)
- Any text in a language other than Portuguese (Brazil)
- Misspelled, garbled or fake-looking text
- Watermarks, signatures, low-resolution artifacts
- Generic stock-photo aesthetic

All text in the artwork MUST be written in Portuguese (Brazil). Final result: ultra high-resolution 4K advertising image, crisp details, sharp typography, premium finish, polished, professional advertising design, sharp typography, brand-grade composition."
`;

exports[`buildCreativePrompt > monta o prompt mínimo 1`] = `
"[INTRODUCTION]
Create a 9:16 vertical Instagram Story, 1080x1920px advertisement image for a professional brand.
Quality target: ultra high-resolution 4K advertising image, crisp details, sharp typography, premium finish.

[DESIGN SYSTEM]


[SAFE ZONE]
LAYOUT RULE — READ FIRST: the top 14% and the bottom 35% of the image are EMPTY BACKGROUND. No text, no logo, no badge, no button, nothing readable may appear in those bands — they contain only the continuation of the background artwork. Every readable element is grouped together in the band between 14% and 65% of the image height, and no closer than 6% to the left or right edge.
IMAGERY IS NOT RESTRICTED. The photograph, background, gradient, texture and any purely visual element MUST fill the entire frame, edge to edge, full bleed. Never shrink, letterbox or inset the artwork to respect the margins below. A full-bleed background is preferred.
THE MESSAGE IS RESTRICTED. Every element that carries meaning — headline, subheadline, body copy, price, date, badge, brand logo and call-to-action — must sit ENTIRELY inside the safe area described below, because the platform UI (profile picture, caption, CTA button, engagement bar) is drawn on top of everything outside it.
SAFE AREA: keep the top 14% and the bottom 35% of the frame free of message elements, plus 6% on each side. On the nominal 1080x1920 canvas that is the rectangle from x=65 to x=1015 and from y=269 to y=1248 (950x979px). The percentages are the rule; the pixels are only a reference.
COMPOSE HIGHER. The safe area is not centred: its vertical midpoint sits 202px ABOVE the centre of the frame. Anything you centre on the canvas will land too low and be covered. Bias the entire text composition upward, into the upper-middle of the frame.
TYPE SIZE. Size the type against the SAFE BOX (950x979px), not against the full frame — type that looks right relative to the whole canvas reads as small once confined to the safe box. At this canvas width use roughly: headline 64-120px, subheadline 40-56px, body and data 28-36px, call-to-action 36-48px. Text must stay legible on a phone screen.
LEAVE BREATHING ROOM. Do not push elements right up against the safe boundary. Phones taller than this ratio get the creative zoomed in (cropping whatever falls outside the safe area) or letterboxed, and the advertiser does not control which.
BOTTOM-RIGHT CORNER: reserve 40% instead of 35% on the right-hand side of the lower area — the like, comment, share and audio controls stack there.

[DO NOT INCLUDE]

- Any headline, body copy, logo, badge or call-to-action outside the safe area (outside x 65-1015, y 269-1248 on the nominal canvas)
- Any text in a language other than Portuguese (Brazil)
- Misspelled, garbled or fake-looking text
- Watermarks, signatures, low-resolution artifacts
- Generic stock-photo aesthetic

All text in the artwork MUST be written in Portuguese (Brazil). Final result: ultra high-resolution 4K advertising image, crisp details, sharp typography, premium finish, polished, professional advertising design, sharp typography, brand-grade composition."
`;

exports[`buildCreativePrompt > trata a copy do usuário como final e literal 1`] = `
"[INTRODUCTION]
Create a 9:16 vertical Instagram Story, 1080x1920px advertisement image for a professional brand.
Quality target: high-resolution polished advertising image with crisp typography and clean details.

[DESIGN SYSTEM]


[SAFE ZONE]
LAYOUT RULE — READ FIRST: the top 14% and the bottom 35% of the image are EMPTY BACKGROUND. No text, no logo, no badge, no button, nothing readable may appear in those bands — they contain only the continuation of the background artwork. Every readable element is grouped together in the band between 14% and 65% of the image height, and no closer than 6% to the left or right edge.
IMAGERY IS NOT RESTRICTED. The photograph, background, gradient, texture and any purely visual element MUST fill the entire frame, edge to edge, full bleed. Never shrink, letterbox or inset the artwork to respect the margins below. A full-bleed background is preferred.
THE MESSAGE IS RESTRICTED. Every element that carries meaning — headline, subheadline, body copy, price, date, badge, brand logo and call-to-action — must sit ENTIRELY inside the safe area described below, because the platform UI (profile picture, caption, CTA button, engagement bar) is drawn on top of everything outside it.
SAFE AREA: keep the top 14% and the bottom 35% of the frame free of message elements, plus 6% on each side. On the nominal 1080x1920 canvas that is the rectangle from x=65 to x=1015 and from y=269 to y=1248 (950x979px). The percentages are the rule; the pixels are only a reference.
COMPOSE HIGHER. The safe area is not centred: its vertical midpoint sits 202px ABOVE the centre of the frame. Anything you centre on the canvas will land too low and be covered. Bias the entire text composition upward, into the upper-middle of the frame.
TYPE SIZE. Size the type against the SAFE BOX (950x979px), not against the full frame — type that looks right relative to the whole canvas reads as small once confined to the safe box. At this canvas width use roughly: headline 64-120px, subheadline 40-56px, body and data 28-36px, call-to-action 36-48px. Text must stay legible on a phone screen.
LEAVE BREATHING ROOM. Do not push elements right up against the safe boundary. Phones taller than this ratio get the creative zoomed in (cropping whatever falls outside the safe area) or letterboxed, and the advertiser does not control which.
BOTTOM-RIGHT CORNER: reserve 40% instead of 35% on the right-hand side of the lower area — the like, comment, share and audio controls stack there.

[TEXT BLOCKS — USER-WRITTEN COPY, FINAL]
Render ONLY the exact text below as overlay on the creative, in Portuguese (Brazil), professional typography, perfect legibility. Do not paraphrase, shorten, expand or reword it.
"""
Linha 1
Linha 2
"""
This is the COMPLETE and FINAL copy — the user wrote it themselves and it must not be changed. Do NOT add any headline, kicker, tagline, subtitle, CTA button, price, offer or any other text that is not written above, even if the composition seems to have room for it or a reference/template suggests one. If the text above has no explicit call-to-action line, do not invent one. Distribute exactly this text across the composition following the typography system and hierarchy from the design system above — do not add new text elements to fill the layout.

[DO NOT INCLUDE]

- Any headline, body copy, logo, badge or call-to-action outside the safe area (outside x 65-1015, y 269-1248 on the nominal canvas)
- Any text in a language other than Portuguese (Brazil)
- Misspelled, garbled or fake-looking text
- Watermarks, signatures, low-resolution artifacts
- Generic stock-photo aesthetic

All text in the artwork MUST be written in Portuguese (Brazil). Final result: high-resolution polished advertising image with crisp typography and clean details, polished, professional advertising design, sharp typography, brand-grade composition."
`;
